# m-c99

./: .gitignore  Makefile  README.md  build.bat  build_hs.bat
app/: Main.hs
cbits/: blob.c
docs/: backend-handoff.md  diagnostics.md
hs/: README.md  c99mtlc-hs.cabal
hs/app/: Main.hs
hs/src/Mtlc/: FFI.hs
hs/test/: LinkSmoke.hs
include/: complex.h  dbghelp.h  direct.h  stdarg.h  stdbool.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  windows.h
include/sys/: stat.h
libmtlc/include/mtlc/: build.h  context.h  module.h  mtlc.h  pipeline.h  target.h  type.h
libmtlc/lib/: mtlc.lib
src/: Mtlc.hs  ast.c  ast.h  common.c  common.h  ctype.c  ctype.h  lexer.c  lexer.h  lower.c  lower.h  main.c  parser.c  parser.h  preprocess.c  sema.c  sema.h  token.c  token.h
src/C99/: Common.hs  Lower.hs  Parser.hs  Preprocess.hs  Sema.hs  Token.hs
src/Mtlc/: FFI.hs
tests/: arith.c  complex.c  difftest.sh  fib.c  hello.c  loop.c  pp_cond.c  run_suite.ps1  stack_array.c  storage_stack.c  variadic.c
tests/diag/: cascade.c  unused.c
tests/diff/: README.md  declarator_nesting.c  float_eq_local.c  float_narrow.c  fptr_float.c  global_float_init.c  param_compound.c  sizeof_string.c  struct_rvalue_member.c  thread_local.c  utf8_source.c
